# swagger.json
@@ -46,7 +46,7 @@
                 "password": {
                   "example": "any"
                 },
-                "userName": {
+                "username": {
                   "example": "any"
                 },
                 "firstName": {
@@ -122,19 +122,19 @@
             "schema": {
               "type": "object",
               "properties": {
+                "email": {
+                  "example": "any"
+                },
                 "password": {
                   "example": "any"
                 },
-                "userName": {
+                "username": {
                   "example": "any"
                 },
                 "firstName": {
                   "example": "any"
                 },
                 "lastName": {
-                  "example": "any"
-                },
-                "email": {
                   "example": "any"
                 },
                 "birthDate": {
@@ -154,11 +154,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
